--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/Northwind
+spring.datasource.url = jdbc:postgresql://localhost:5432/bastetdb
 spring.datasource.username = postgres
 spring.datasource.password = admin
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=false
+
+#CREATE EXTENSION IF NOT EXISTS "uuid-ossp";
+#ALTER EXTENSION "uuid-ossp" SET SCHEMA public;
+
+#SELECT uuid_in(md5(random()::text || random()::text)::cstring);
+#SELECT uuid_generate_v4();
+#SELECT gen_random_uuid();
+
+#projects ve corporates tamamd?r.
