result classes and file operation classes created.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.password = admin
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
+error.DEFAULT_DATA_ERROR_MESSAGE="erorrrrr"
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
 
 #CREATE EXTENSION IF NOT EXISTS "uuid-ossp";
 #ALTER EXTENSION "uuid-ossp" SET SCHEMA public;
