--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.servlet.multipart.max-request-size=2MB
 #SELECT uuid_generate_v4();
 #SELECT gen_random_uuid();
 
-#projects ve corporates tamamd?r.
+#employee
+#task ?emas? olu?turulmad? db veri üretecek sitede
