Jwt token implementation done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.servlet.multipart.max-request-size=2MB
 
 #employee
 #task ?emas? olu?turulmad? db veri üretecek sitede
+app.jwtSecret=YmFzdGV0bWFuYWdlbWVudA==
