--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/bastetdb
+spring.datasource.url = jdbc:postgresql://localhost:5432/bastetdb2
 spring.datasource.username = postgres
 spring.datasource.password = admin
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -17,5 +17,5 @@ spring.servlet.multipart.max-request-size=2MB
 #SELECT gen_random_uuid();
 
 #employee
-#task ?emas? olu?turulmad? db veri üretecek sitede
+#task ?emas? olu?turulmad? db veri ï¿½retecek sitede
 app.jwtSecret=YmFzdGV0bWFuYWdlbWVudA==
