Select Dtos Created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.show-sql=false
 error.DEFAULT_DATA_ERROR_MESSAGE="erorrrrr"
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+logging.level.org.springframework.data.jpa=DEBUG
 
 #http://localhost:8080/swagger-ui/index.html
 #CREATE EXTENSION IF NOT EXISTS "uuid-ossp";
